--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
 }
 
 .header-container {
-  /* position: fixed;
-  left: 0;
-  top: 0; */
+  padding: 6px;
   height: 60px;
   box-shadow: 0px 0px 8px gray;
   margin-bottom: 8px;
@@ -85,6 +83,10 @@
   padding: 10px;
 }
 
+.row-data {
+  text-align: center;
+}
+
 .right-header {
   display: flex;
   flex-direction: column;
@@ -125,4 +127,24 @@
   color: black;
   width: fit-content;
   border-radius: 8px;
+}
+
+.wishlist-button {
+  height: 40px;
+  padding: 4px;
+  background-color: lightgray;
+  border: 1px gray;
+  width: fit-content;
+  border-radius: 8px;
+}
+
+.wishList {
+  display: flex;
+  list-style-type: none;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.row-data--wishListed {
+  color: red;
 }
